app/src/components/CommitHistoryBanner/CommitHistoryBanner.css
.commit-history-banner {
    position: relative;
    width: 100%;
    height: 100%;
    padding: 0.25em 2.5em 0.25em 2.5em;
    border-radius: 4px;
    border: 1px solid var(--border-color);
    box-shadow:
        rgba(0, 0, 0, 0.4) 0px 2px 4px,
        rgba(0, 0, 0, 0.3) 0px 7px 13px -3px;

    @media screen and (min-width: 965px) {
        & {
            width: 50%;
        }
    }

    .commit-history-banner-button {
        display: flex;
        flex-direction: row;
        justify-content: flex-start;
        align-items: center;
        flex-wrap: wrap;
        gap: 0.5em;
        width: 100%;
        height: 100%;
        font-family: custom-bold;
        font-size: 1em;
        color: var(--primary-font-color);
        padding: 0;
        border: none;
        border-radius: 0;
        background-color: transparent;
        outline: none;
        cursor: pointer;

        @media screen and (min-width: 965px) {
            & {
                flex-wrap: nowrap;
            }
        }

        &:hover {
            color: var(--secondary-highlight-color);

            & .more-icon {
                fill: var(--secondary-highlight-color);
            }

            & .commit-history-preview {
                opacity: 1;
            }
        }

        .commit-history-banner-title {
            white-space: nowrap;
        }

        .more-icon {
            position: relative;
            fill: var(--primary-font-color);
        }
    }

    .commit-history-preview {
        text-align: left;
        font-family: custom-regular;
        overflow-wrap: break-word;
        color: var(--primary-font-color);
        opacity: 0.8;
        margin: 0;
        padding: 0;

        @media screen and (min-width: 965px) {
            & {
                overflow: hidden;
                white-space: nowrap;
                text-overflow: '';
            }
        }
    }
}

